@@ -1,0 +1,10 @@
+#include "config.h"
+#include "ch.h"
+#include "hal.h"
+
+/*
+ * Board-specific initialization code.
+ */
+void boardInit(void)
+{
+}
