@@ -1,3 +1,7 @@
+2012-12-17  Niibe Yutaka  <gniibe@fsij.org>
+
+	* boards/FST_01_00: Added.
+
 2012-10-30  Niibe Yutaka  <gniibe@fsij.org>
 
 	* Version 0.04.
